--- a/configapp/templates/student_about.html
+++ b/configapp/templates/student_about.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Info</title>
+    <title>Title</title>
 </head>
 <body>
 
@@ -18,7 +18,7 @@
           <a class="nav-link active" aria-current="page" href="{% url 'home' %}">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="{% url 'add_subjects' %}">Add Subject</a>
+          <a class="nav-link" href="#">Features</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">Pricing</a>
@@ -34,54 +34,31 @@
 </nav>
 
 <div class="row">
-  <div class="col-3 text-center mt-6">
-    <ul class="list-group">
-  <li class="list-group-item active" aria-current="true">Subject</li>
-  {% for item in subjects %}
-  <li class="list-group-item"><a href="{% url 'subjects' item.pk %}" class="">{{item.title}}</a></li>
-  {% endfor %}
+    <div class="col-3">
 
-    </ul>
-  </div>
-  <div class="col-9 mt-4">
-    {% for item in students %}
-    <div class="card mt-4 ">
-  <div class="card-header">
-    {{item.subject}}
-  </div>
+        <ul class="lists group text center mt-4 ">
+            <li class="list-group-item active" aria-current="true">Subject</li>
+            <li class="list-group-item"><a href="/app/category/{{item.pk}}"> {{student.subject}}</a></li>
+        </ul>
+    </div>
+</div>
+<div class="row">
+    <div class="col-3">
+<div class="card mb-3">
+  <img src="http://picsum.photos/200" class="img-thumbnail" alt="" width="350">
+    </div>
+</div>
+    <div class="col-9">
   <div class="card-body">
-    {% if item.phone%}
-    <img src="{{item.photo.url}}" alt="" width="350">
-    {% else %}
-      <img src="http://picsum.photos/200" class="img-thumbnail" alt="">
-    {% endif %}
-    <h5 class="card-title">{{item.full_name}}</h5>
-      <p class="card-text">{{item.location}}</p>
-        <!-- QR-код -->
-   <img src="{% url 'generate_qr_najottalim' item.subject.id %}" alt="QR Code Najot Talim" width="150">
-
-    <!-- Кнопка для скачивания PDF -->
-    <a href="{% url 'generate_pdf' item.pk %}" class="btn btn-success mt-2">Скачать PDF</a>
-    <a href="{% url 'student_about' item.pk %}" class="btn btn-success mt-2">Batafsil</a>
-
-  </div>
-  <div class="card-footer text-muted">
-    {{item.created_ed | date:'Y-m-d H:i:s'}}
+    <h5 class="card-title">{{student.full_name}}</h5>
+        <p class="card-text">{{student.phone}}</p>
+    <a href="{% url 'update_students' student.pk %}" class="btn btn-primary">Update</a></div>
   </div>
 </div>
-    {% endfor %}
-  </div>
-</div>
-
 
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-
-
-
-
-
 </body>
 </html>
